# aoc24

./: Cargo.toml  rustfmt.toml
src/: lib.rs
src/01/: main.rs
src/02/: main.rs
src/03/: main.rs
src/04/: main.rs
src/05/: main.rs
src/06/: edge_ex.in.txt  main.rs
src/07/: main.rs
