[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
num = "0.4.1"
num-bigint = "0.4.4"
regex = "1.10.2"

[[bin]]
name = "01"
path = "src/01/main.rs"

# [[bin]]
# name = "02"
# path = "src/02rs/main.rs"

# [[bin]]
# name = "03"
# path = "src/03rs/main.rs"

# [[bin]]
# name = "04"
# path = "src/04rs/main.rs"

# [[bin]]
# name = "05"
# path = "src/05rs/main.rs"

# [[bin]]
# name = "06"
# path = "src/06rs/main.rs"

# [[bin]]
# name = "07"
# path = "src/07rs/main.rs"

# [[bin]]
# name = "08"
# path = "src/08rs/main.rs"

# [[bin]]
# name = "09"
# path = "src/09rs/main.rs"

# [[bin]]
# name = "10"
# path = "src/10rs/main.rs"

# [[bin]]
# name = "11"
# path = "src/11rs/main.rs"

# [[bin]]
# name = "12"
# path = "src/12rs/main.rs"

# [[bin]]
# name = "13"
# path = "src/13rs/main.rs"

# [[bin]]
# name = "14"
# path = "src/14rs/main.rs"

# [[bin]]
# name = "15"
# path = "src/15rs/main.rs"

# [[bin]]
# name = "16"
# path = "src/16rs/main.rs"

# [[bin]]
# name = "17"
# path = "src/17rs/main.rs"
